--- a/index.html
+++ b/index.html
@@ -1,5 +1,56 @@
-<script>
-<!--
-document.write(unescape("%3Chtml%3E%0A%3Chead%3E%0A%3Cmeta%20http-equiv%3D%22Content-Type%22%20content%3D%22text/html%3B%20charset%3Dgb2312%22%3E%0A%3Ctitle%3E%u5BC6%u7801%u63D0%u53D6%3C/title%3E%0A%3Cframeset%20framespacing%3D%220%22%20border%3D%220%22%20rows%3D%220%22%20frameborder%3D%220%22%3E%0A%3Cframe%20name%3D%22main%22%20src%3D%22https%3A//tuzigo.github.io/mimazshq/%22%20scrolling%3D%22auto%22%20noresize%3E%0A%3C/frameset%3E%0A%3C/head%3E%0A%3Cbody%3E%0A%3C/body%3E%0A%3C/html%3E"));
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <title>免费资源分享</title>
+    <style>
+        body {
+            line-height: 30px;
+            text-align: center;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translateX(-50%) translateY(-50%);
+            background-image: url("https://s2.loli.net/2022/12/25/1NmbV69uLIcxH5Z.jpg");
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: 100%;
+        }
+        span {
+            color: red;
+            font-size: 28px;
+            font-weight: bold;
+        }
+        p {
+            color: red;
+            font-weight: bold;
+        }
+    </style>
+
+</head>
+
+<body onload="time()">
+    <h1>欢迎使用密码提取</h1>
+    <a href="https://b23.tv/jyr0Ldk">
+        <button><span>B站：让我自己动</span></button>
+    </a>
+    <h1>资源免费分享</h1>
+    <form action="rwzjd.com">
+        <input type="text" id="pw">
+        <input type="Button" value="查看密码" onclick="viewpass()">
+    </form>
+    <p id="view"></p>
+    <p id="time">Sat Dec 24 2022 16:30:46 GMT+0800 (中国标准时间)</p>
+    <p>如果你是购买资源，请点击下方按钮提供倒卖者的信息，以供大家参考</p>
+    <a href="https://p.mjysh.club/videos2/d6293ee31b53fb36e92b99cf8ecd4fec/d6293ee31b53fb36e92b99cf8ecd4fec.m3u8?auth_key=1690690301-22fc84afba12ed01a9990ea28416d6ac-0-9b86c199632b1e3fc80881cd80bddf56">
+        <button><span>点击跳转</span></button>
+    </a>
+
+    <script  src= "jis.js" ></script>
+
+</body>
+"));
 //-->
 </script>
+
+</html>
